<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- Parse Information -->
    <string name="application_id">sja2aTWuKp4jiX1mDEhcFAb3eHztXtmp50Bjs83l</string>
    <string name="client_key">EN8CwyUYZ9HmRRQ10zxWS2lZIrq1j7DpQSeq5YNX</string>
    
    
    <!-- Action Bar Titles -->
    <string name="action_bar_title_signup">Sign Up</string>
    <string name="action_bar_title_login">Log In</string>
    <string name="action_bar_title_map">@string/app_name</string>
    <string name="action_bar_title_single_place">Comments for </string>
    <string name="action_bar_title_list">Places Near Me</string>
    <string name="app_name">Community Upgrade</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    
    <!-- Loggin In Progress Text -->
    <string name="logging_in_progress_title">Loading</string>
    <string name="logging_in_progress_message">Please wait while loading...</string>
    
    <!-- Sign Up Messages -->
    <string name="signup_error">There was a problem signing up. Do you already have an account?</string>
    <string name="signup_validation_error">Both username and password are required.</string>
    
    <!-- Sign Up Layout Text -->
    <string name="signup_btn_text">Sign Up</string>
    
    
    <!-- Login Layout Text -->
    <string name="login_btn_text">Log In</string>
    <string name="login_username_label">Username:</string>
    <string name="login_password_label">Password:</string>
    <string name="signup_textview_text">Sign Up Instead?</string>
    <string name="login_textview_text">Log In Instead?</string>
    
    
    <!-- Places Layout Text -->
    <string name="add_place_btn_label">Add Place</string>
    <string name="add_place_name_label">Place Name:</string>
    <string name="add_place_address_label">Address:</string>
    <string name="add_place_city_label">City: </string>
    <string name="add_place_state_label">State: </string>
    <string name="add_place_zip_label">Zip: </string>
    
    <string name="add_place_use_current_location_label">Use Current Location? </string>
    
    <string name="add_place_description_label">Description</string>
    <string name="add_place_contact_number_label">Contact Number:</string>
    
    <string name="validate_data_title">Invalid Input</string>
    <string name="validate_data_message">No fields can be empty!</string>
    
    <string name="add_place_success">Place Saved!</string>
    <string name="add_place_error">There was an error saving. Please try again later.</string>
    <!--  Place Single Text -->
    <string name="add_comment_label">Comment: </string>
    <string name="add_comment_button_text">Add Comment</string>
    <string name="add_comment_validation_empty_error">Your comment cannot be empty.</string>
    <string name="add_comment_validation_short_error">Your comment must be at least 3 characters long.</string>
    <string name="add_comment_saved_confirmation">Your comment has been saved!</string>
    <string name="add_comment_saved_error">There was an error saving your comment. Please try again later.</string>
    
    <string name="default_confirmation">OK</string>
    
    <!-- Errors -->
    <string name="error_no_provider_title">No Provider Available.</string>
    <string name="error_no_provider_message">No Provider Available. Turn on Location Access?</string>
    <string name="go_to_location_settings">Turn On Location Access</string>
    <string name="close_app">Close App</string>
    <!-- Dialog Strings -->
    <string name="dialog_saving_title">Saving</string>
    <string name="dialog_saving_message">Your information is being saved.</string>
    <string name="refresh_title">Refresh</string>
    <string name="logout">Logout</string>
    <string name="action_add_comment">Add Comment</string>
    <string name="action_map">Map View</string>
    <string name="action_list">List View</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add_place">Add Place</string>
    <string name="action_logout">Logout</string>
</resources>

