<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<TableLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:stretchColumns="1">
	    
	    <TableRow
	        android:layout_margin="10dp">
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:id="@+id/login_username_label"
		        android:text="@string/login_username_label"
		        android:labelFor="@+id/login_username"
		        style="@style/DefaultLabel"/>
		    <EditText
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:id="@id/login_username"
		        style="@style/DefaultInput"
		        />
		</TableRow>
    
	
	 <TableRow
	        android:layout_margin="10dp"
        android:stretchColumns="1">
		 <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:id="@+id/login_password_label"
		        android:text="@string/login_password_label"
		         android:labelFor="@+id/login_password"
		        style="@style/DefaultLabel"/>
	    <EditText
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword"
	        android:id="@id/login_password"
	        style="@style/DefaultInput"
			/>
    </TableRow>
    
    
   
    
	    <TableRow
	        android:layout_margin="10dp"
	        >
		    <Button
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_span="2"
		        android:text="@string/login_btn_text"
		        android:id="@+id/login_button"
		        style="@style/DefaultButton" />
		</TableRow>
    
     </TableLayout>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#0000FF"
        android:id="@+id/login_to_signup_page"
        android:text="@string/signup_textview_text" />
        
    
</LinearLayout>
